Lots of changes - revamped admin section, removed lots and lots of dead code.

--- a/app/views/companies/_tab_header.html.haml
+++ b/app/views/companies/_tab_header.html.haml
@@ -1,8 +1,7 @@
 %div
-  %h1= current_company.name
   %ul.tabs
     - admin_tabs.each do |header|
-      - if @mode == header[0]
+      - if (@mode || params[:action]) == header[0]
         %li.active
           %a= header[1]
       - else
