--- a/app/views/companies/styles.html.haml
+++ b/app/views/companies/styles.html.haml
@@ -1,6 +1,6 @@
 %div.single_pane
-  = render "companies/tab_header", { company: @company, mode: "users" }
-  = form_for @custom_style do |f|
+  = render "companies/tab_header"
+  = form_for(@custom_style, url: admin_styles_path) do |f|
     %h2 Custom Styles
     %p{ style: "margin-top:10px;" } Edit the styles below. Note that you must save before these styles will take effect.
     = render "shared/error_messages", object: f.object
@@ -13,5 +13,5 @@
     %div.field.clearfix
       = f.text_area :styles, rows: "15", placeholder: "Add CSS styles here...", style: "margin:20px 40px; width: 800px; min-height: 200px;"
     %div.actions
-      = link_to "Cancel", @custom_style, class: "button button-standard"
+      = link_to "Cancel", admin_styles_path, class: "button button-standard"
       = f.submit "Save", class: "button button-actionable"
