--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -12,7 +12,7 @@
 %div#homepage
   %div#topsection
     %div.headerspace
-      %div#leftheaderspace Explore the world of Metabright
+      %div#leftheaderspace Explore the world of MetaBright
     %div#carousel_container
       %div#left_scroll
         %a{href: "javascript:slide(\"left\");"}
