--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -43,7 +43,7 @@
       %p You must achieve a higher MetaBright level before you can unlock this Persona.
     - @paths.each do |path|
       %div.mosaic-block.bar2
-        = link_to enroll_path_url(path), class: "mosaic-overlay" do
+        = link_to enroll_path_url(path), class: "mosaic-overlay", title: "#{path.name}" do
           %div.details
             %h4 #{truncate(path.name,length: 17, separator: ' ')}
             - if current_user.enrolled?(path)
