--- a/app/views/shared/_mosaic.html.haml
+++ b/app/views/shared/_mosaic.html.haml
@@ -1,9 +1,9 @@
 - custom_class = "" unless custom_class
 %li
-  %div.mosaic-block.bar2{title:"#{title}"}
-    = link_to link, class: "mosaic-overlay #{custom_class}" do
+  %div.mosaic-block.bar2
+    = link_to link, class: "mosaic-overlay #{custom_class}", title: "#{title}" do
       %div.details
-        %h4= truncate(title, length: 22)
+        %h4= truncate(title, length: 25)
         %h5= truncate(subtitle, length: 30)
     %div
       %img.mosaic-backdrop.clip_pic{ src: pic }
