path metadata well added

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -30,6 +30,15 @@
       %input#challengehidden_auto_slide_seconds{:type => "hidden", :value => "0"}/
   %div.row
     %div.span5
+      %div.leftbox.newsfeed
+        %div.leftboxheader{style: "padding: 10px 12px; "} About This Challenge
+        %div.leftboxfooter{style: "padding-top:6px;"}
+          %ul
+            %li Author: <img src="#"> <a href="#"><strong>Some dude</strong></a>
+            %li Description: This is an awesome Challenge for many reasons. I shall begin elucidating them now...
+            %li Last updated: Today
+            %li Total users: 4,192
+            %li Newest member: <a href="#">Bra McBra</a>
       %div.leftbox.newsfeed{ style: "min-height: 361px;" }
         %div.leftboxheader{style: "padding: 10px 12px; "} Leaderboard
         %ul#ranks{ style: "padding: 0px;"}
