author well background change

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -31,8 +31,8 @@
   %div.row
     %div.span5
       %div.leftbox.newsfeed
-        %div.leftboxheader{style: "padding: 10px 12px; "} About This Challenge
-        %div.leftboxfooter{style: "padding-top:6px;"}
+        %div.leftboxheader{style: "padding: 10px 12px;"} About This Challenge
+        %div.leftboxfooter{style: "padding-top:6px; background-color:white;"}
           %ul
             %li Author: <img src="#"> <a href="#"><strong>Some dude</strong></a>
             %li Description: This is an awesome Challenge for many reasons. I shall begin elucidating them now...
