--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -83,7 +83,7 @@
               Sections
             %ul.sectionlist
               - @path.sections.each do |s|
-                %li.launchpad_link
+                %li.launchpad_link{ title:"#{s.name}"}
                   - if s.points_until_unlock(@enrollment) <= 0
                     %div{ style: "display:inline-block; width:75%;" }
                       = link_to launchpad_section_path(s), remote: true do
