--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -10,13 +10,9 @@
           %div{style: "margin-bottom:5px;"}
             - persona.paths.each do |path|
               %div.mosaic-block.bar2{style: "margin-bottom:10px;"}
-                = link_to enroll_path_url(path), class: "mosaic-overlay", title: "#{path.name}" do
+                = link_to path_path(path), class: "mosaic-overlay", title: "#{path.name}" do
                   %div.details
                     %h4{style: "font-weight:normal"} #{truncate(path.name,length: 17, separator: ' ')}
-                    - if current_user.enrolled?(path)
-                      %button.btn.success Enrolled
-                    - else
-                      %button.btn.danger Enroll
                 %div 
                   = image_tag path.path_pic, class: "mosaic-backdrop", style: "display:inline;", size: "140x140"
           %hr{:style => "margin:0"}
