--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,7 +1,7 @@
 %div.postfooter
   %div.leftstuff{ style: "height: 27px; width: 100%; padding-top: 5px;" }
     %div.displayin.floatl
-      %a.comment{ style: "position: relative; top: 5px;", onclick: "$(this).parents('.postfooter').find('.comments').slideDown();" } #{owner.comments.size.to_i} Comments
+      %a.comment{ style: "position: relative; top: 5px;", onclick: "open_comments(this);" } #{owner.comments.size.to_i} Comments
     - if @sharing
       = render "shared/sharing", { custom_style: "display: inline; margin-left: 10px; float: left;", title: sharing_title, url: sharing_url }
     - else
