--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -51,6 +51,7 @@
         = form_tag(complete_section_path(@section.id), :remote => true, :method => "put", :id => "challenge_form") do
           = hidden_field_tag :task_id, @task.id
           = hidden_field_tag :points_remaining, 100
+          = hidden_field_tag :streak, @streak
           %ol{ style: "list-style-position: inside; margin-left: 0px;" }
             - @answers.each do |a|
               %li.answer_content{ id: "answer_#{a.id}" }
@@ -69,7 +70,7 @@
           %span Points
         %div.streakspace.counterbox
           %span.counter
-            - streak = (@streak > 0 ? @streak : 0).to_s.split("").reverse.push("0").reverse.slice(-2, 2)
+            - streak = @streak.to_s.split("").reverse.push("0").reverse.slice(-2, 2)
             - streak.each do |s|
               %span.digit
                 %span{ title: s }= s
