--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -22,7 +22,7 @@
           = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "primary" : "")) do
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
             %div.vote_count= r.submitted_answer.total_votes.to_i
-      %div.posttext.leveltext= r.task.question
+      %div.posttext.leveltext= link_to r.task.question, task_details_path(r.path, r.submitted_answer.id), style: "color: inherit;"
       = link_to submission_details_path(r.path, r.submitted_answer.id), style: "text-transform: none; color: inherit;" do
         %div.CRarea
           - if r.task.answer_sub_type == Task::TEXT
