--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -1,6 +1,3 @@
-%script{:src => "app/assets/javascripts/challenge_carousel.js", :type => "text/javascript"}
-    
-
 %section
   %div#topsection
     %div#updatespace
@@ -17,16 +14,20 @@
             - else
               %h3{ style:"height:36px;" }
         %div#challengecarousel_container
-          %div#challengeleft_scroll
-            %a{href: "javascript:challengeslide(\"left\");"}
-              %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png"}/
-          %div#challengecarousel_inner
+          - if @enrolled_users.size > 4
+            %div#challengeleft_scroll
+              %a{href: "javascript:challengeslide(\"left\");"}
+                %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png"}/
+          %div#challengecarousel_inner{ style: "#{@enrolled_users.size < 4 ? 'margin-left: -12px;' : ''}" }
             %ul#challengecarousel_ul
+              - if @enrolled_users.size < 4
+                = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
               - @enrolled_users.each do |u|
                 = render "shared/mosaic", { pic: u.profile_pic, link: user_path(u), title: u.name, subtitle: "Level #{u.level(@path)}, #{u.points(@path)} points" }
-          %div#challengeright_scroll
-            %a{href: "javascript:challengeslide(\"right\");"}
-              %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png"}/
+          - if @enrolled_users.size > 4
+            %div#challengeright_scroll
+              %a{href: "javascript:challengeslide(\"right\");"}
+                %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png"}/
       %input#challengehidden_auto_slide_seconds{:type => "hidden", :value => "0"}/
   %div.row
     %div.span5
