--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -7,27 +7,29 @@
   #left_scroll img, #right_scroll img{ margin: 28px 0 0 10px; width:25px; border:0; /* remove the default border of linked image */cursor: pointer; cursor: hand; }
   #left_scroll img {margin-left:10px;}
   #right_scroll img{margin-left:1px;}
-  %script{:src => "app/assets/javascripts/homepage_carousel.js", :type => "text/javascript"}
 
 %div#homepage
   %div#topsection
     %div.headerspace
       %div#leftheaderspace Explore the world of MetaBright
     %div#carousel_container
-      %div#left_scroll
-        %a{href: "javascript:slide(\"left\");"}
-          %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png"}/
+      - if @enrollments.size > 1
+        %div#left_scroll
+          %a{href: "javascript:slide(\"left\");"}
+            %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png"}/
       %div#carousel_inner
         %ul#carousel_ul
+          = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
           - @enrollments.each do |e|
             = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
-          - if @enrollments.size < 4
-            = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
+          = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
+          = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
           - unless current_user.profile_complete?
             = render "shared/mosaic", { link: edit_user_path(current_user), title: "Whoooo are you?", subtitle: "Tell your story to the world!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/complete_profile_pic_carousel_altered.png" }
-      %div#right_scroll
-        %a{href: "javascript:slide(\"right\");"}
-          %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png"}/
+      - if @enrollments.size > 1
+        %div#right_scroll
+          %a{href: "javascript:slide(\"right\");"}
+            %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png"}/
       %input#hidden_auto_slide_seconds{:type => "hidden", :value => "0"}/
   %div.row
     %div.span5
