--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -35,4 +35,4 @@
             = link_to "Sign out", signout_path
         - else
           %li
-            = link_to "Sign In", root_url
+            = link_to "Sign in", root_url, class: "btn danger", style: "padding:3px 7px; border-radius:2px; margin-top:6px;"
