--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -1,4 +1,4 @@
-%div.quizcontainer
+%div.quizcontainer{ style: "#{@stored_resource.nil? ? '': 'margin-top: 0px;'}" }
   %div.quizspace
     :javascript
       var continue_countdown = true;
