--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -61,7 +61,7 @@
         = render "shared/newsfeed", { newsfeed_items: @responses }
 
 - if current_user
-  %div#launchpad.modal.hide.fade{ style: "left: 36%; top: 30%;"}
+  %div#launchpad.dropdown_modal.modal.hide.fade{ style: "top: 7%;"}
     %div.overlay
       %div.launchpad
         %div.modal_close
