new subtitle for signed out users

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -13,7 +13,7 @@
               %h3 Level #{@enrollment.level}, #{@enrollment.total_points} points
             - else
               %h4{ style: "height: 46px; cursor: pointer;" }
-                %a.login_link Login or Register to join this challenge!
+                %a.login_link Login or register to join this Challenge!
         %div#challengecarousel_container
           - if @enrolled_users.size > 4
             %div#challengeleft_scroll
