Exclusing achievements from newsfeed.

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -69,7 +69,7 @@
         %h1
           = image_tag(@path.path_pic)
           %div #{@path.name} 
-          %div{ style: "font: normal 18px 'MuliItalic', sans-serif;" } - #{@total_points_earned} pts, Level #{current_user.level(@path)}
+          %div{ style: "font: normal 18px 'MuliItalic', sans-serif;" } - #{@enrollment.total_points} pts, Level #{current_user.level(@path)}
         %div.launchpadcontent
           %div.launchpadsectioncolumn
             %div.launchpadcolumnheader
