--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -75,7 +75,7 @@
             %div.launchpadcolumnheader
               Sections
             %ul.sectionlist
-              - @path.sections.each do |s|
+              - @path.sections.all(order: "id ASC").each do |s|
                 %li.launchpad_link{ title:"#{s.name}"}
                   - if s.points_until_unlock(@enrollment) <= 0
                     %div{ style: "display:inline-block; width:75%; line-height:16px;" }
